logs/horizon-benchmark-dashboard.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/benchmark_dashboard'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/api'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/api/db'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/deployments'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/deployments/templates'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/deployments/templates/deployments'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/static'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/static/benchmark'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/static/benchmark/css'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/static/benchmark/js'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/tasks'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/tasks/templates'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/tasks/templates/tasks'...
Listing './lib/python3.5/site-packages/benchmark_dashboard/utils'...
Compiling './lib/python3.5/site-packages/benchmark_dashboard/utils/rally.py'...
***   File "./lib/python3.5/site-packages/benchmark_dashboard/utils/rally.py", line 182
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/crispy_forms'...
Listing './lib/python3.5/site-packages/crispy_forms/templates'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap3'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap3/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap4'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/bootstrap4/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/uni_form'...
Listing './lib/python3.5/site-packages/crispy_forms/templates/uni_form/layout'...
Listing './lib/python3.5/site-packages/crispy_forms/templatetags'...
Listing './lib/python3.5/site-packages/crispy_forms/tests'...
Listing './lib/python3.5/site-packages/crispy_forms/tests/templates'...
Listing './lib/python3.5/site-packages/django_crispy_forms-1.7.0.dist-info'...
Listing './lib/python3.5/site-packages/horizon_benchmark_dashboard-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/horizon_contrib'...
Listing './lib/python3.5/site-packages/horizon_contrib/api'...
Listing './lib/python3.5/site-packages/horizon_contrib/common'...
Listing './lib/python3.5/site-packages/horizon_contrib/compat'...
Listing './lib/python3.5/site-packages/horizon_contrib/forms'...
Listing './lib/python3.5/site-packages/horizon_contrib/generic'...
Listing './lib/python3.5/site-packages/horizon_contrib/locale'...
Listing './lib/python3.5/site-packages/horizon_contrib/locale/cs'...
Listing './lib/python3.5/site-packages/horizon_contrib/locale/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/horizon_contrib/static'...
Listing './lib/python3.5/site-packages/horizon_contrib/static/contrib'...
Listing './lib/python3.5/site-packages/horizon_contrib/static/contrib/css'...
Listing './lib/python3.5/site-packages/horizon_contrib/static/contrib/js'...
Listing './lib/python3.5/site-packages/horizon_contrib/tables'...
Listing './lib/python3.5/site-packages/horizon_contrib/tables/columns'...
Listing './lib/python3.5/site-packages/horizon_contrib/templates'...
Listing './lib/python3.5/site-packages/horizon_contrib/templates/horizon_contrib'...
Listing './lib/python3.5/site-packages/horizon_contrib/templates/horizon_contrib/forms'...
Listing './lib/python3.5/site-packages/horizon_contrib/templates/horizon_contrib/tables'...
Listing './lib/python3.5/site-packages/horizon_contrib/templatetags'...
Listing './lib/python3.5/site-packages/horizon_contrib/utils'...
Listing './lib/python3.5/site-packages/horizon_contrib-2017.10.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
